Closed
Bug 375546
Opened 18 years ago
Closed 18 years ago
nsXFormsModelElement::ValidateNode() wrongly assumes simple type
Categories
(Core Graveyard :: XForms, defect)
Core Graveyard
XForms
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: sspeiche, Assigned: sspeiche)
Details
(Keywords: fixed1.8.0.12, fixed1.8.1.4)
Attachments
(2 files)
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a3pre) Gecko/20070305 Minefield/3.0a3pre
Build Identifier:
This ValidateNode() is invoked when submission is called and MDG computes node states, ie valid. If node has complex content, then it never validates as simple type handling treats as unknown schema type.
This is fairly major, as it blocks submission even when content is valid.
Reproducible: Always
Assignee | ||
Comment 1•18 years ago
|
||
Assignee | ||
Comment 2•18 years ago
|
||
I also fixed a couple misuses of namespace constants in validator. It was using XSD namespace and not XSI, so it was wrongly looking for xsd:type.
Attachment #259798 -
Flags: review?(doronr)
Updated•18 years ago
|
Attachment #259798 -
Flags: review?(doronr) → review+
Assignee | ||
Updated•18 years ago
|
Attachment #259798 -
Flags: review?(aaronr)
Attachment #259798 -
Flags: review?(aaronr) → review+
Assignee: xforms → sspeiche
Status: UNCONFIRMED → NEW
Ever confirmed: true
checked into trunk for sspeiche
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Whiteboard: xf-to-branch
checked into 1.8 branch on 2007-04-12
checked into 1.8.0 branch on 2007-04-16
Keywords: fixed1.8.0.12,
fixed1.8.1.4
Whiteboard: xf-to-branch
Updated•9 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•