[XForms] ValidateNode wrongly assumes simple type. Bug 375546, p=sspeiche r=doronr+aaronr